Jetpack Fuel working Asteroids spawning Asteroid movement not working

--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,7 +127,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -137,13 +137,12 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDownBP/Maps/OuterBoard
 
 [AssetEditorManager]
-CleanShutdown=True
-<<<<<<< HEAD
+CleanShutdown=False
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Body.Body
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/CharacterBody.CharacterBody
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/OuterBoardGameMode.OuterBoardGameMode
-=======
->>>>>>> 04ee7eb89388a779d64a6f0c8ae74e3a38685b86
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Pawn_Blueprint.Pawn_Blueprint
+OpenAssetsAtExit=/Game/TopDownBP/Maps/OuterBoard.OuterBoard:PersistentLevel.OuterBoard
+None=======
 
 [RootWindow]
 ScreenPosition=X=569.000 Y=102.000
@@ -164,7 +163,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Game Projects/OuterboardUnreal/MyProject/Content/TopDownBP/Maps
+UNR=../../../../../../Users/Caleb/Documents/School Work/Unity and Unreal/OuterboardUnreal/MyProject/Content/TopDownBP/Maps
 BRUSH=../../../../../UnrealProject/OuterboardUnreal/MyProject/Content/
 FBX=../../../../../UnrealProject/OuterboardUnreal/MyProject/Content/
 FBXAnim=../../../../../UnrealProject/OuterboardUnreal/MyProject/Content/
@@ -865,31 +864,24 @@ MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-<<<<<<< HEAD
-MRUItem0=/Game/TopDownBP/Blueprints/OuterBoardGameMode
-MRUItem1=/Game/TopDownBP/Blueprints/CharacterBody
-MRUItem2=/Game/TopDownBP/Blueprints/Body
-MRUItem3=/Game/TopDownBP/Maps/OuterBoard
-MRUItem4=/Game/TopDownBP/Blueprints/TopDownController
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem6=/Game/TopDownBP/Maps/TopDownExampleMap
-=======
-MRUItem0=/Game/TopDownBP/Blueprints/CharacterBody
-MRUItem1=/Game/TopDownBP/Blueprints/OuterBoardGameMode
-MRUItem2=/Game/TopDownBP/Maps/crosshairs
-MRUItem3=/Game/TopDownBP/Maps/OuterBoard
-MRUItem4=/Game/TopDownBP/Blueprints/Pawn_Blueprint
-MRUItem5=/Game/TopDownBP/Blueprints/bullet_blue
-MRUItem6=/Game/TopDownBP/Blueprints/Body
-MRUItem7=/Game/TopDownBP/Blueprints/Actor_Blueprint
-MRUItem8=/Game/TopDownBP/Character/Character_Arm/arm_mat
-MRUItem9=/Game/TopDownBP/Character/Character_Arm/Charater_Arm0001
-MRUItem10=/Game/TopDownBP/Blueprints/TopDownController
-MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem12=/Game/TopDownBP/Maps/TopDownExampleMap
->>>>>>> 04ee7eb89388a779d64a6f0c8ae74e3a38685b86
+MRUItem0=/Game/TopDownBP/Blueprints/Asteroid
+MRUItem1=/Game/TopDownBP/Blueprints/Pawn_Blueprint
+MRUItem2=/Game/TopDownBP/Blueprints/CharacterBody
+MRUItem3=/Game/TopDownBP/Blueprints/Body
+MRUItem4=/Game/TopDownBP/Maps/OuterBoard
+MRUItem5=/Game/TopDownBP/Blueprints/OuterBoardGameMode
+MRUItem6=/Game/TopDownBP/Maps/crosshairs
+MRUItem7=/Game/TopDownBP/Blueprints/bullet_blue
+MRUItem8=/Game/TopDownBP/Blueprints/Actor_Blueprint
+MRUItem9=/Game/TopDownBP/Character/Character_Arm/arm_mat
+MRUItem10=/Game/TopDownBP/Character/Character_Arm/Charater_Arm0001
+MRUItem11=/Game/TopDownBP/Blueprints/TopDownController
+MRUItem12=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem13=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [PlacementMode]
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Game/TopDownBP/Blueprints/Pawn_Blueprint.Pawn_Blueprint;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.Pawn;/Engine/Transient.ActorFactoryPawn_0
@@ -1378,12 +1370,86 @@ StaticMeshActor.Replication=True
 StaticMeshActor.Actor=True
 crosshairs_C.Tick=True
 crosshairs_C.HUD=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.Tick=True
+WorldSettings.AI=True
+WorldSettings.LOD=True
+WorldSettings.Cooking=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+MulticastInlineDelegateProperty.DelegateInputs=True
+MulticastInlineDelegateProperty.Variable=True
+MulticastInlineDelegateProperty.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+Asteroid_C.Tick=True
+Asteroid_C.Rendering=True
+Asteroid_C.Replication=True
+Asteroid_C.Input=True
+Asteroid_C.Actor=True
+ToFloatField.Variable=True
+ToFloatField.Sockets=True
+ToFloatField.Field=True
+ToFloatField.Tags=True
+ToFloatField.ComponentReplication=True
+ToFloatField.Activation=True
+ToFloatField.Cooking=True
+ToFloatField.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.VirtualTexture=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+Asteroid_C.TransformCommon=True
+RandomVector.Field=True
+RandomVector.Tags=True
+RandomVector.ComponentReplication=True
+RandomVector.Activation=True
+RandomVector.Variable=True
+RandomVector.Cooking=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.VirtualTexture=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Replication=True
+NavMeshBoundsVolume.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownController.TopDownController=0
 /Game/TopDownBP/Blueprints/CharacterBody.CharacterBody=1
 /Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=0
-/Game/TopDownBP/Blueprints/OuterBoardGameMode.OuterBoardGameMode=1
+/Game/TopDownBP/Blueprints/OuterBoardGameMode.OuterBoardGameMode=0
 /Game/TopDownBP/Maps/OuterBoard.OuterBoard:PersistentLevel.OuterBoard=1
 /Game/TopDownBP/Blueprints/Body.Body=1
 /Game/TopDownBP/Blueprints/Pawn_Blueprint.Pawn_Blueprint=1
@@ -1475,6 +1541,8 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,
+PaperSpriteComponent=PaperSpriteComponent.Physics.ConstraintsGroup,
+Asteroid_C=PaperSpriteComponent.Physics.ConstraintsGroup,
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1520,5 +1588,10 @@ bPlatformUsed[32]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
+
+[DetailPropertyExpansion]
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 
