--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -859,19 +859,20 @@ MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/CharacterBody
-MRUItem1=/Game/TopDownBP/Blueprints/OuterBoardGameMode
-MRUItem2=/Game/TopDownBP/Maps/crosshairs
-MRUItem3=/Game/TopDownBP/Maps/OuterBoard
-MRUItem4=/Game/TopDownBP/Blueprints/Pawn_Blueprint
-MRUItem5=/Game/TopDownBP/Blueprints/bullet_blue
-MRUItem6=/Game/TopDownBP/Blueprints/Body
-MRUItem7=/Game/TopDownBP/Blueprints/Actor_Blueprint
-MRUItem8=/Game/TopDownBP/Character/Character_Arm/arm_mat
-MRUItem9=/Game/TopDownBP/Character/Character_Arm/Charater_Arm0001
-MRUItem10=/Game/TopDownBP/Blueprints/TopDownController
-MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem12=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/OuterBoard
+MRUItem1=/Game/TopDownBP/Blueprints/Body
+MRUItem2=/Game/TopDownBP/Blueprints/Pawn_Blueprint
+MRUItem3=/Game/TopDownBP/Character/Body/idle
+MRUItem4=/Game/TopDownBP/Blueprints/CharacterBody
+MRUItem5=/Game/TopDownBP/Blueprints/OuterBoardGameMode
+MRUItem6=/Game/TopDownBP/Maps/crosshairs
+MRUItem7=/Game/TopDownBP/Blueprints/bullet_blue
+MRUItem8=/Game/TopDownBP/Blueprints/Actor_Blueprint
+MRUItem9=/Game/TopDownBP/Character/Character_Arm/arm_mat
+MRUItem10=/Game/TopDownBP/Character/Character_Arm/Charater_Arm0001
+MRUItem11=/Game/TopDownBP/Blueprints/TopDownController
+MRUItem12=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem13=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1362,6 +1363,22 @@ StaticMeshActor.Replication=True
 StaticMeshActor.Actor=True
 crosshairs_C.Tick=True
 crosshairs_C.HUD=True
+PaperFlipbook.Sprite=True
+PaperFlipbookComponent.Variable=True
+PaperFlipbookComponent.TransformCommon=True
+PaperFlipbookComponent.Sockets=True
+PaperFlipbookComponent.Sprite=True
+PaperFlipbookComponent.Materials=True
+PaperFlipbookComponent.Physics=True
+PaperFlipbookComponent.Collision=True
+PaperFlipbookComponent.Lighting=True
+PaperFlipbookComponent.Rendering=True
+PaperFlipbookComponent.VirtualTexture=True
+PaperFlipbookComponent.Tags=True
+PaperFlipbookComponent.ComponentReplication=True
+PaperFlipbookComponent.Activation=True
+PaperFlipbookComponent.Cooking=True
+PaperFlipbookComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownController.TopDownController=0
@@ -1375,6 +1392,7 @@ crosshairs_C.HUD=True
 /Game/TopDownBP/Blueprints/Actor_Blueprint.Actor_Blueprint=1
 /Game/TopDownBP/Blueprints/bullet_blue.bullet_blue=1
 /Game/TopDownBP/Maps/crosshairs.crosshairs=1
+/Game/TopDownBP/Character/Body/idle.idle=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1504,5 +1522,9 @@ bPlatformUsed[32]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
+
+[DetailPropertyExpansion]
+PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[10]\" "
+Object=
 
 
